--- a/index.html
+++ b/index.html
@@ -4,156 +4,76 @@
   <meta charset="UTF-8" />
   <title>Mariana Torres – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta
-    name="description"
-    content="Portfolio of Mariana Torres – audiovisual archivist and moving image practitioner."
-  />
+  <meta name="description" content="Portfolio of Mariana Torres – audiovisual archivist and moving image practitioner." />
 
   <!-- Fonts -->
-  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
-  <!-- Navbar loader (carrega navbar.html para dentro do header) -->
+  <!-- Navbar loader -->
   <script src="navbar-loader.js" defer></script>
 
   <style>
     :root {
       --bg: #050608;
-      --bg-soft: #0b0e14;
       --text-main: #f5f5f5;
       --text-muted: #b0b2bf;
       --accent: #78d3ff;
       --max-width: 1100px;
     }
 
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
     body {
       margin: 0;
       background: radial-gradient(circle at top, #171a28 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    a {
-      color: inherit;
-      text-decoration: none;
+      font-family: "Source Serif 4", serif;
     }
 
     main {
       max-width: var(--max-width);
       margin: 0 auto;
-      padding: 40px 18px 60px;
+      padding: 40px 18px 80px;
     }
-
-    @media (min-width: 768px) {
-      main {
-        padding: 60px 24px 80px;
-      }
-    }
-
-    /* HERO / CAPA */
 
     .hero {
-      min-height: calc(100vh - 80px);
+      min-height: 80vh;
       display: flex;
       align-items: center;
       justify-content: center;
       text-align: center;
+      padding: 40px 20px;
       position: relative;
-      padding: 40px 16px;
     }
 
     .hero::before {
-      /* Depois trocamos isto por uma imagem tua se quiseres */
       content: "";
       position: absolute;
       inset: 0;
       background:
-        radial-gradient(circle at 20% 15%, rgba(120, 211, 255, 0.35), transparent 55%),
-        radial-gradient(circle at 80% 20%, rgba(248, 210, 80, 0.28), transparent 55%),
-        radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0.9), #050608 80%);
-      opacity: 0.95;
+        radial-gradient(circle at 20% 20%, rgba(120, 211, 255, 0.3), transparent 60%),
+        radial-gradient(circle at 70% 30%, rgba(248, 210, 80, 0.3), transparent 60%),
+        radial-gradient(circle at bottom, rgba(0,0,0,0.95), #050608 70%);
       z-index: -1;
     }
 
     .hero-inner {
-      max-width: 640px;
+      max-width: 700px;
       margin: 0 auto;
     }
 
     .hero-name {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      font-size: 2.6rem;
-      letter-spacing: 0.18em;
-      text-transform: uppercase;
-      margin-bottom: 0.3rem;
+      font-family: "Bebas Kai", sans-serif;
+      font-size: 3rem;
+      letter-spacing: 0.15em;
+      margin-bottom: 0.4rem;
     }
 
     .hero-role {
-      font-size: 1.05rem;
       color: var(--text-muted);
-      margin-bottom: 1.5rem;
+      font-size: 1.1rem;
+      margin-bottom: 1.6rem;
     }
 
     .hero-text {
-      font-size: 0.98rem;
-      line-height: 1.7;
-      color: var(--text-main);
-      margin-bottom: 1.8rem;
-    }
-
-    .hero-meta {
-      font-size: 0.9rem;
-      color: var(--text-muted);
-    }
-
-    .hero-meta span + span {
-      margin-left: 1.1rem;
-    }
-  </style>
-</head>
-
-<body>
-  <!-- NAVBAR: será injetado aqui pelo navbar-loader.js -->
-  <header id="navbar-container"></header>
-
-  <main>
-    <section class="hero">
-      <div class="hero-inner">
-        <div class="hero-name">Mariana Torres</div>
-        <div class="hero-role">
-          Audiovisual Archivist &amp; Moving Image Practitioner
-        </div>
-
-        <p class="hero-text">
-          I work between <strong>film archives, analogue technologies and moving image
-          practice</strong>. My interests cross preservation, projection, photochemical
-          experimentation and the afterlives of militant and countercultural cinema.
-        </p>
-
-        <p class="hero-text">
-          This portfolio gathers <strong>artistic works, research and analogue film
-          practice</strong>, alongside documentation of projects developed with archives,
-          festivals and cultural institutions.
-        </p>
-
-        <div class="hero-meta">
-          <span>Based in Lisbon</span>
-          <span>PT · ES · EN</span>
-        </div>
-      </div>
-    </section>
-  </main>
-</body>
-</html>
-
-
-
+      font-size: 1rem;
+      line-hei
