--- a/index.html
+++ b/index.html
@@ -1,107 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <title>Mariana Torres – Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio of Mariana Torres – audiovisual archivist and moving image practitioner." />
+  <title>Mariana Torres – Audiovisual Archivist & Moving Image Practitioner</title>
 
-  <!-- Fonts -->
-  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600&display=swap" rel="stylesheet" />
-
-  <!-- Navbar loader -->
-  <script src="navbar-loader.js" defer></script>
+  <!-- FONTS -->
+  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
 
   <style>
+    /* ---------- COLOR SYSTEM ---------- */
     :root {
-      --bg: #050608;
+      --bg-soft: #090b10;
       --text-main: #f5f5f5;
-      --text-muted: #b0b2bf;
+      --text-muted: #a6a9b5;
       --accent: #78d3ff;
-      --max-width: 1100px;
     }
 
- /* RESET BÁSICO DO BODY PARA NÃO TER MARGEM */
-body {
-  margin: 0;
-}
+    body {
+      margin: 0;
+      background: var(--bg-soft);
+      color: var(--text-main);
+      font-family: "Source Serif 4", Georgia, serif;
+      line-height: 1.6;
+    }
 
-/* HEADER FIXO COM LOGO À ESQ E MENU À DIR */
-.site-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  background: rgba(5, 6, 10, 0.96);
-}
+    /* ---------- HEADER / NAVBAR ---------- */
 
-/* CONTENTOR INTERNO DO HEADER */
-.site-header__inner {
-  max-width: 1100px;          /* combina com o resto do site */
-  margin: 0 auto;
-  padding: 14px 18px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
+    #navbar-placeholder {
+      position: relative;
+      z-index: 1000;
+    }
 
-/* NOME "MARIANA TORRES" */
-.site-brand {
-  font-family: "Bebas Kai", system-ui, -apple-system, sans-serif;
-  letter-spacing: 0.18em;
-  font-size: 1rem;
-  text-transform: uppercase;
-  color: #f5f5f5;
-  text-decoration: none;
-}
+    /* Compensar a altura do header */
+    main {
+      padding-top: 120px;
+    }
 
-/* LISTA DE LINKS DO MENU */
-.nav-links {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  gap: 18px;
-  font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
-  font-size: 0.92rem;
-}
+    /* ---------- HERO SECTION ---------- */
 
-/* LINKS NORMAIS */
-.nav-links a {
-  color: #f5f5f5;
-  text-decoration: none;
-  white-space: nowrap;
-}
+    .hero {
+      width: 100%;
+      padding: 180px 20px;
+      background: linear-gradient(135deg, #1f3b4d 0%, #4c3f1b 100%);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
 
-/* HOVER */
-.nav-links a:hover {
-  color: #78d3ff;
-}
+    .hero-title {
+      font-family: "Bebas Neue", sans-serif;
+      letter-spacing: 0.18em;
+      font-size: 4rem;
+      margin-bottom: 15px;
+    }
 
-/* DROPDOWNS SIMPLES */
-.has-dropdown {
-  position: relative;
-}
+    .hero-subtitle {
+      font-size: 1.3rem;
+      color: var(--text-muted);
+      margin-bottom: 40px;
+    }
 
-.has-dropdown .dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background: rgba(5, 6, 10, 0.98);
-  list-style: none;
-  margin: 6px 0 0;
-  padding: 8px 10px;
-  display: none;
-  flex-direction: column;
-  gap: 4px;
-}
+    .hero-text {
+      max-width: 800px;
+      font-size: 1.15rem;
+      color: var(--text-main);
+      line-height: 1.7;
+    }
+  </style>
+</head>
 
-.has-dropdown:hover .dropdown {
-  display: flex;
-}
+<body>
 
-.has-dropdown .dropdown a {
-  font-size: 0.86rem;
-}
+  <!-- NAVBAR LOAD -->
+  <div id="navbar-placeholder"></div>
+  <script src="navbar-loader.js" defer></script>
+
+  <main>
+
+    <!-- ---------- HERO SECTION ---------- -->
+    <section class="hero">
+      <h1 class="hero-title">MARIANA TORRES</h1>
+      <div class="hero-subtitle">Audiovisual Archivist & Moving Image Practitioner</div>
+
+      <p class="hero-text">
+        I work between <strong>film archives</strong>, <strong>analogue technologies</strong>
+        and <strong>moving image practice</strong>. My interests cross preservation,
+        projection, photochemical experimentation and the afterlives of militant
+        and countercultural cinema.
+        <br><br>
+        This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
+        and <strong>analogue film practice</strong>, alongside documentation of projects
+        developed with archives, festivals and cultural institutions.
+      </p>
+    </section>
+
+  </main>
+
+</body>
+
+</html>
