--- a/index.html
+++ b/index.html
@@ -1,105 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mariana Torres – Audiovisual Archivist & Moving Image Practitioner</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;600&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+  <!-- Fonts -->
+  <link href="https://fonts.cdnfonts.com/css/bebas-kai" rel="stylesheet" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet"
+  />
 
   <style>
-    /* ---------- COLOR SYSTEM ---------- */
     :root {
+      --bg: #050608;
       --bg-soft: #090b10;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
       --accent: #78d3ff;
+      --max-width: 1100px;
+    }
+
+    * {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
     body {
       margin: 0;
-      background: var(--bg-soft);
+      padding: 0;
+      background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, serif;
-      line-height: 1.6;
+      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      -webkit-font-smoothing: antialiased;
+      /* espaço para o navbar fixo */
+      padding-top: 72px;
     }
 
-    /* ---------- HEADER / NAVBAR ---------- */
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
 
-    #navbar-placeholder {
-      position: relative;
+    h1, h2, h3, h4 {
+      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
+      letter-spacing: 0.08em;
+      text-transform: uppercase;
+      margin: 0;
+    }
+
+    p {
+      margin: 0 0 0.9rem;
+      line-height: 1.7;
+      font-size: 1rem;
+    }
+
+    /* ================= NAVBAR ================= */
+
+    .site-nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(5, 6, 8, 0.96);
+      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
       z-index: 1000;
     }
 
-    /* Compensar a altura do header */
-    main {
-      padding-top: 120px;
+    .nav-inner {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 14px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
     }
 
-    /* ---------- HERO SECTION ---------- */
+    .nav-brand {
+      font-family: "Bebas Kai", sans-serif;
+      font-size: 1.2rem;
+      letter-spacing: 0.16em;
+      white-space: nowrap;
+    }
+
+    .nav-links {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 18px;
+      padding: 0;
+      margin: 0;
+      font-size: 0.9rem;
+      color: var(--text-muted);
+      flex-wrap: wrap;
+      justify-content: flex-end;
+    }
+
+    .nav-links a {
+      position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
+    }
+
+    .nav-links a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0;
+      height: 1px;
+      background: var(--accent);
+      transition: width 0.16s ease-out;
+    }
+
+    .nav-links a:hover::after {
+      width: 100%;
+    }
+
+    .has-dropdown {
+      position: relative;
+    }
+
+    .has-dropdown > a {
+      padding-right: 14px;
+    }
+
+    .has-dropdown .dropdown {
+      position: absolute;
+      top: calc(100% + 8px);
+      left: 0;
+      min-width: 220px;
+      background: rgba(5, 6, 8, 0.98);
+      border: 1px solid rgba(255, 255, 255, 0.08);
+      list-style: none;
+      padding: 8px 0;
+      margin: 0;
+      display: none;
+      z-index: 1100;
+    }
+
+    .has-dropdown .dropdown li a {
+      display: block;
+      padding: 6px 14px;
+      font-size: 0.88rem;
+      color: var(--text-muted);
+    }
+
+    .has-dropdown .dropdown li a:hover {
+      background: rgba(255, 255, 255, 0.06);
+      color: var(--text-main);
+    }
+
+    .has-dropdown:hover .dropdown {
+      display: block;
+    }
+
+    @media (max-width: 720px) {
+      .nav-inner {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .nav-links {
+        justify-content: flex-start;
+      }
+    }
+
+    /* ================= HERO / CAPA ================= */
+
+    .shell {
+      max-width: var(--max-width);
+      margin: 0 auto;
+      padding: 32px 18px 80px;
+    }
 
     .hero {
-      width: 100%;
-      padding: 180px 20px;
-      background: linear-gradient(135deg, #1f3b4d 0%, #4c3f1b 100%);
+      min-height: calc(100vh - 80px);
       display: flex;
-      flex-direction: column;
       align-items: center;
+      justify-content: center;
       text-align: center;
+      position: relative;
+      overflow: hidden;
     }
 
-    .hero-title {
-      font-family: "Bebas Neue", sans-serif;
-      letter-spacing: 0.18em;
-      font-size: 4rem;
-      margin-bottom: 15px;
+    .hero-bg {
+      position: absolute;
+      inset: 0;
+      background:
+        radial-gradient(circle at 20% 20%, rgba(248, 210, 80, 0.4), transparent 55%),
+        radial-gradient(circle at 70% 30%, rgba(120, 211, 255, 0.35), transparent 55%),
+        radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0.9), #050608 80%);
+      opacity: 0.9;
+      z-index: -1;
     }
 
-    .hero-subtitle {
-      font-size: 1.3rem;
+    .hero-inner {
+      max-width: 720px;
+      margin: 0 auto;
+    }
+
+    .hero-name {
+      font-size: 3rem;
+      margin-bottom: 0.4rem;
+    }
+
+    @media (min-width: 768px) {
+      .hero-name {
+        font-size: 3.6rem;
+      }
+    }
+
+    .hero-role {
+      font-size: 1.1rem;
       color: var(--text-muted);
-      margin-bottom: 40px;
+      margin-bottom: 1.6rem;
     }
 
     .hero-text {
-      max-width: 800px;
-      font-size: 1.15rem;
+      font-size: 1rem;
       color: var(--text-main);
-      line-height: 1.7;
+    }
+
+    .hero-text em {
+      font-style: italic;
     }
   </style>
 </head>
-
 <body>
+  <!-- Aqui o navbar é carregado a partir de navbar.html -->
+  <div id="navbar"></div>
 
-  <!-- NAVBAR LOAD -->
-  <div id="navbar-placeholder"></div>
-  <script src="navbar-loader.js" defer></script>
-
-  <main>
-
-    <!-- ---------- HERO SECTION ---------- -->
+  <main class="shell">
     <section class="hero">
-      <h1 class="hero-title">MARIANA TORRES</h1>
-      <div class="hero-subtitle">Audiovisual Archivist & Moving Image Practitioner</div>
+      <div class="hero-bg"></div>
+      <div class="hero-inner">
+        <h1 class="hero-name">MARIANA TORRES</h1>
+        <p class="hero-role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
 
-      <p class="hero-text">
-        I work between <strong>film archives</strong>, <strong>analogue technologies</strong>
-        and <strong>moving image practice</strong>. My interests cross preservation,
-        projection, photochemical experimentation and the afterlives of militant
-        and countercultural cinema.
-        <br><br>
-        This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
-        and <strong>analogue film practice</strong>, alongside documentation of projects
-        developed with archives, festivals and cultural institutions.
-      </p>
+        <div class="hero-text">
+          <p>
+            I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and
+            <strong> moving image practice</strong>. My interests cross preservation, projection,
+            photochemical experimentation and the afterlives of militant and countercultural cinema.
+          </p>
+          <p>
+            This portfolio gathers <strong>artistic works</strong>, <strong>research and preservation projects</strong> and
+            <strong> analogue film practice</strong>, alongside documentation of collaborations with archives, festivals
+            and cultural institutions.
+          </p>
+        </div>
+      </div>
     </section>
-
   </main>
 
+  <!-- Script que carrega o navbar modular -->
+  <script src="navbar-loader.js"></script>
 </body>
-
 </html>
+
