--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
   <style>
     :root {
-      --bg: #050608;
       --bg-soft: #090b10;
       --text-main: #f5f5f5;
       --text-muted: #a6a9b5;
@@ -22,242 +21,152 @@
       --max-width: 1100px;
     }
 
-    * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
     body {
       margin: 0;
       padding: 0;
       background: radial-gradient(circle at top, #141623 0, #050608 55%);
       color: var(--text-main);
-      font-family: "Source Serif 4", Georgia, "Times New Roman", serif;
+      font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
-      /* espaço para o navbar fixo */
-      padding-top: 72px;
     }
 
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    h1, h2, h3, h4 {
-      font-family: "Bebas Kai", system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin: 0;
-    }
-
-    p {
-      margin: 0 0 0.9rem;
-      line-height: 1.7;
-      font-size: 1rem;
-    }
-
-    /* ================= NAVBAR ================= */
-
-    .site-nav {
+    /* HEADER FIXO */
+    header {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       background: rgba(5, 6, 8, 0.96);
-      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
-      z-index: 1000;
+      padding: 14px 20px;
+      z-index: 999;
     }
 
-    .nav-inner {
+    nav {
       max-width: var(--max-width);
       margin: 0 auto;
-      padding: 14px 20px;
       display: flex;
-      align-items: center;
       justify-content: space-between;
-      gap: 20px;
+      align-items: center;
     }
 
-    .nav-brand {
-      font-family: "Bebas Kai", sans-serif;
-      font-size: 1.2rem;
-      letter-spacing: 0.16em;
-      white-space: nowrap;
+    .brand {
+      font-family: "Bebas Kai";
+      font-size: 1.1rem;
+      letter-spacing: 0.18em;
     }
 
-    .nav-links {
+    .menu {
       list-style: none;
       display: flex;
-      align-items: center;
-      gap: 18px;
-      padding: 0;
+      gap: 20px;
       margin: 0;
+      padding: 0;
       font-size: 0.9rem;
       color: var(--text-muted);
-      flex-wrap: wrap;
-      justify-content: flex-end;
     }
 
-    .nav-links a {
-      position: relative;
-      padding-bottom: 2px;
-      white-space: nowrap;
-    }
-
-    .nav-links a::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 0;
-      height: 1px;
-      background: var(--accent);
-      transition: width 0.16s ease-out;
-    }
-
-    .nav-links a:hover::after {
-      width: 100%;
-    }
-
-    .has-dropdown {
+    .menu a {
+      color: inherit;
+      text-decoration: none;
       position: relative;
     }
 
-    .has-dropdown > a {
-      padding-right: 14px;
+    /* Dropdowns */
+    .dropdown {
+      position: relative;
     }
 
-    .has-dropdown .dropdown {
-      position: absolute;
-      top: calc(100% + 8px);
-      left: 0;
-      min-width: 220px;
-      background: rgba(5, 6, 8, 0.98);
-      border: 1px solid rgba(255, 255, 255, 0.08);
-      list-style: none;
-      padding: 8px 0;
-      margin: 0;
+    .dropdown-content {
       display: none;
-      z-index: 1100;
-    }
-
-    .has-dropdown .dropdown li a {
-      display: block;
-      padding: 6px 14px;
-      font-size: 0.88rem;
-      color: var(--text-muted);
-    }
-
-    .has-dropdown .dropdown li a:hover {
-      background: rgba(255, 255, 255, 0.06);
-      color: var(--text-main);
-    }
-
-    .has-dropdown:hover .dropdown {
-      display: block;
-    }
-
-    @media (max-width: 720px) {
-      .nav-inner {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .nav-links {
-        justify-content: flex-start;
-      }
-    }
-
-    /* ================= HERO / CAPA ================= */
-
-    .shell {
-      max-width: var(--max-width);
-      margin: 0 auto;
-      padding: 32px 18px 80px;
-    }
-
-    .hero {
-      min-height: calc(100vh - 80px);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .hero-bg {
       position: absolute;
-      inset: 0;
-      background:
-        radial-gradient(circle at 20% 20%, rgba(248, 210, 80, 0.4), transparent 55%),
-        radial-gradient(circle at 70% 30%, rgba(120, 211, 255, 0.35), transparent 55%),
-        radial-gradient(circle at 50% 100%, rgba(0, 0, 0, 0.9), #050608 80%);
-      opacity: 0.9;
-      z-index: -1;
+      top: 22px;
+      left: 0;
+      background: rgba(5, 6, 8, 0.95);
+      padding: 10px;
+      list-style: none;
+      border: 1px solid rgba(255, 255, 255, 0.1);
     }
 
-    .hero-inner {
-      max-width: 720px;
+    .dropdown-content li {
+      margin-bottom: 4px;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* HERO */
+    .hero {
+      padding-top: 140px;
+      text-align: center;
+      max-width: 700px;
       margin: 0 auto;
     }
 
-    .hero-name {
-      font-size: 3rem;
-      margin-bottom: 0.4rem;
+    .hero h1 {
+      font-family: "Bebas Kai";
+      font-size: 3.5rem;
+      letter-spacing: 0.15em;
+      margin-bottom: 0.5rem;
     }
 
-    @media (min-width: 768px) {
-      .hero-name {
-        font-size: 3.6rem;
-      }
-    }
-
-    .hero-role {
-      font-size: 1.1rem;
+    .hero-sub {
       color: var(--text-muted);
-      margin-bottom: 1.6rem;
-    }
-
-    .hero-text {
-      font-size: 1rem;
-      color: var(--text-main);
-    }
-
-    .hero-text em {
-      font-style: italic;
+      margin-bottom: 1.5rem;
     }
   </style>
 </head>
+
 <body>
-  <!-- Aqui o navbar é carregado a partir de navbar.html -->
-  <div id="navbar"></div>
 
-  <main class="shell">
-    <section class="hero">
-      <div class="hero-bg"></div>
-      <div class="hero-inner">
-        <h1 class="hero-name">MARIANA TORRES</h1>
-        <p class="hero-role">Audiovisual Archivist &amp; Moving Image Practitioner</p>
+  <!-- HEADER / MENU -->
+  <header>
+    <nav>
+      <div class="brand">MARIANA TORRES</div>
+      <ul class="menu">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
 
-        <div class="hero-text">
-          <p>
-            I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and
-            <strong> moving image practice</strong>. My interests cross preservation, projection,
-            photochemical experimentation and the afterlives of militant and countercultural cinema.
-          </p>
-          <p>
-            This portfolio gathers <strong>artistic works</strong>, <strong>research and preservation projects</strong> and
-            <strong> analogue film practice</strong>, alongside documentation of collaborations with archives, festivals
-            and cultural institutions.
-          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+        <li class="dropdown">
+          <a href="projects.html">Projects ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="artistic-works.html">Artistic Works</a></li>
+            <li><a href="research-preservation.html">Research & Preservation</a></li>
+          </ul>
+        </li>
 
-  <!-- Script que carrega o navbar modular -->
-  <script src="navbar-loader.js"></script>
+        <li class="dropdown">
+          <a href="analogue-film.html">Analogue Film Practice ▾</a>
+          <ul class="dropdown-content">
+            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
+            <li><a href="technical-documentation.html">Technical Documentation</a></li>
+            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
+          </ul>
+        </li>
+
+        <li><a href="writing-publications.html">Writing & Publications</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>MARIANA TORRES</h1>
+    <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
+
+    <p>
+      I work between <strong>film archives</strong>, <strong>analogue technologies</strong>
+      and <strong>moving image practice</strong>. My interests cross preservation,
+      projection, photochemical experimentation and the afterlives of militant
+      and countercultural cinema.
+    </p>
+
+    <p>
+      This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
+      and <strong>analogue film practice</strong>, alongside documentation of projects
+      developed with archives, festivals and cultural institutions.
+    </p>
+  </section>
+
 </body>
 </html>
-
