--- a/index.html
+++ b/index.html
@@ -30,45 +30,77 @@
       -webkit-font-smoothing: antialiased;
     }
 
-    /* HEADER FIXO */
+    /* ---------------- HEADER + MENU ---------------- */
+
     header {
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
-      background: rgba(5, 6, 8, 0.96);
-      padding: 14px 20px;
-      z-index: 999;
+      height: 68px;
+      background: rgba(5, 6, 8, 0.95);
+      backdrop-filter: blur(6px);
+      z-index: 1000;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.08);
     }
 
     nav {
       max-width: var(--max-width);
       margin: 0 auto;
+      height: 100%;
+      padding: 0 20px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
 
+    /* Logotipo / Nome */
     .brand {
       font-family: "Bebas Kai";
-      font-size: 1.1rem;
-      letter-spacing: 0.18em;
+      font-size: 1.2rem;
+      letter-spacing: 0.17em;
+      color: var(--text-main);
+      text-decoration: none;
     }
 
+    /* Menu */
     .menu {
       list-style: none;
       display: flex;
-      gap: 20px;
+      gap: 22px;
       margin: 0;
       padding: 0;
-      font-size: 0.9rem;
+      font-size: 0.92rem;
       color: var(--text-muted);
+      align-items: center;
     }
 
     .menu a {
       color: inherit;
       text-decoration: none;
       position: relative;
+      padding-bottom: 2px;
+      white-space: nowrap;
+    }
+
+    .menu a:hover {
+      color: var(--accent);
+    }
+
+    /* Underline hover */
+    .menu a::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 0%;
+      height: 1px;
+      background: var(--accent);
+      transition: width 0.2s;
+    }
+
+    .menu a:hover::after {
+      width: 100%;
     }
 
     /* Dropdowns */
@@ -79,94 +111,6 @@
     .dropdown-content {
       display: none;
       position: absolute;
-      top: 22px;
+      top: 26px;
       left: 0;
-      background: rgba(5, 6, 8, 0.95);
-      padding: 10px;
-      list-style: none;
-      border: 1px solid rgba(255, 255, 255, 0.1);
-    }
 
-    .dropdown-content li {
-      margin-bottom: 4px;
-    }
-
-    .dropdown:hover .dropdown-content {
-      display: block;
-    }
-
-    /* HERO */
-    .hero {
-      padding-top: 140px;
-      text-align: center;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .hero h1 {
-      font-family: "Bebas Kai";
-      font-size: 3.5rem;
-      letter-spacing: 0.15em;
-      margin-bottom: 0.5rem;
-    }
-
-    .hero-sub {
-      color: var(--text-muted);
-      margin-bottom: 1.5rem;
-    }
-  </style>
-</head>
-
-<body>
-
-  <!-- HEADER / MENU -->
-  <header>
-    <nav>
-      <div class="brand">MARIANA TORRES</div>
-      <ul class="menu">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-
-        <li class="dropdown">
-          <a href="projects.html">Projects ▾</a>
-          <ul class="dropdown-content">
-            <li><a href="artistic-works.html">Artistic Works</a></li>
-            <li><a href="research-preservation.html">Research & Preservation</a></li>
-          </ul>
-        </li>
-
-        <li class="dropdown">
-          <a href="analogue-film.html">Analogue Film Practice ▾</a>
-          <ul class="dropdown-content">
-            <li><a href="photochemical-techniques.html">Photochemical Techniques</a></li>
-            <li><a href="technical-documentation.html">Technical Documentation</a></li>
-            <li><a href="darkroom-lab.html">Darkroom / Lab Work</a></li>
-          </ul>
-        </li>
-
-        <li><a href="writing-publications.html">Writing & Publications</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <h1>MARIANA TORRES</h1>
-    <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
-
-    <p>
-      I work between <strong>film archives</strong>, <strong>analogue technologies</strong>
-      and <strong>moving image practice</strong>. My interests cross preservation,
-      projection, photochemical experimentation and the afterlives of militant
-      and countercultural cinema.
-    </p>
-
-    <p>
-      This portfolio gathers <strong>artistic works</strong>, <strong>research</strong>,
-      and <strong>analogue film practice</strong>, alongside documentation of projects
-      developed with archives, festivals and cultural institutions.
-    </p>
-  </section>
-
-</body>
-</html>
