--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
       color: var(--text-main);
       font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
+      position: relative;
+      min-height: 100vh;
+      overflow-x: hidden;
+    }
+
+    /* GIF de fundo a ocupar o ecrã todo */
+    body::before {
+      content: "";
+      position: fixed;
+      inset: 0; /* top/right/bottom/left: 0 */
+      z-index: -1;
+      background:
+        /* camada escura para legibilidade do texto */
+        linear-gradient(to bottom, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.9)),
+        url('Timeline2.gif') center/cover no-repeat;
+      opacity: 0.95;          /* ajusta a força do GIF + gradiente */
+      pointer-events: none;   /* não interfere com cliques */
     }
 
     /* ---------------- HEADER + MENU ---------------- */
@@ -140,15 +157,12 @@
       display: block;
     }
 
-    /* ---------------- HERO ---------------- */
-
+    /* Compensa altura do header */
     .hero {
       padding-top: 160px;
       text-align: center;
       max-width: 730px;
-      margin: 0 auto;
-      position: relative;  /* para o GIF se posicionar dentro da hero */
-      overflow: hidden;
+      margin: 0 auto 80px;
     }
 
     .hero h1 {
@@ -168,21 +182,6 @@
       font-size: 1.05rem;
       line-height: 1.75;
     }
-
-    /* GIF subtil atrás da hero section */
-   .gif-bg {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 40vw;   /* 40% da largura do viewport */
-  height: 40vw;  /* mantém proporção quadrada */
-  transform: translate(-50%, -50%);
-  background: url('Timeline2.gif') center/cover no-repeat;
-  opacity: 0.22;
-  filter: blur(3px);
-  z-index: -1;
-  pointer-events: none;
-}
   </style>
 </head>
 
@@ -221,8 +220,6 @@
 
   <!-- ---------------- HERO SECTION ---------------- -->
   <section class="hero">
-    <div class="gif-bg"></div>
-
     <h1>MARIANA TORRES</h1>
     <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
 
@@ -241,3 +238,4 @@
 
 </body>
 </html>
+
