--- a/index.html
+++ b/index.html
@@ -21,30 +21,26 @@
       --max-width: 1100px;
     }
 
+    /* FUNDO GERAL COM GIF */
     body {
       margin: 0;
       padding: 0;
-      background: radial-gradient(circle at top, #141623 0, #050608 55%);
+      min-height: 100vh;
+      background: #000 url('Timeline2.gif') center center / cover no-repeat fixed;
       color: var(--text-main);
       font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
       position: relative;
-      min-height: 100vh;
-      overflow-x: hidden;
     }
 
-    /* GIF de fundo a ocupar o ecrã todo */
+    /* Overlay escuro por cima do GIF para o texto ficar mais legível */
     body::before {
       content: "";
       position: fixed;
-      inset: 0; /* top/right/bottom/left: 0 */
+      inset: 0;
+      background: rgba(0, 0, 0, 0.55);
       z-index: -1;
-      background:
-        /* camada escura para legibilidade do texto */
-        linear-gradient(to bottom, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.9)),
-        url('Timeline2.gif') center/cover no-repeat;
-      opacity: 0.95;          /* ajusta a força do GIF + gradiente */
-      pointer-events: none;   /* não interfere com cliques */
+      pointer-events: none;
     }
 
     /* ---------------- HEADER + MENU ---------------- */
@@ -55,9 +51,11 @@
       left: 0;
       right: 0;
       height: 68px;
-      background: rgba(5, 6, 8, 0.95);
+      background: rgba(5, 6, 8, 0.80); /* ligeiramente translúcido */
       backdrop-filter: blur(6px);
       z-index: 1000;
+      /* border-bottom removida para não haver linha de divisão */
+      /* border-bottom: 1px solid rgba(255, 255, 255, 0.08); */
     }
 
     nav {
@@ -156,12 +154,14 @@
       display: block;
     }
 
-    /* Compensa altura do header */
+    /* ---------------- HERO SECTION ---------------- */
+
     .hero {
-      padding-top: 160px;
+      padding-top: 160px; /* compensa altura do header */
+      padding-bottom: 80px;
       text-align: center;
       max-width: 730px;
-      margin: 0 auto 80px;
+      margin: 0 auto;
     }
 
     .hero h1 {
@@ -223,7 +223,7 @@
     <div class="hero-sub">Audiovisual Archivist & Moving Image Practitioner</div>
 
     <p class="hero-text">
-      I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and 
+      I work between <strong>film archives</strong>, <strong>analogue technologies</strong> and
       <strong>moving image practice</strong>. My interests cross preservation, projection,
       photochemical experimentation and the afterlives of militant and countercultural cinema.
     </p>
@@ -237,4 +237,5 @@
 
 </body>
 </html>
+
 
