--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: #000 url('Timeline2.gif') center center / cover no-repeat fixed;
+      background: url('Timeline2.gif?v=2') center/cover no-repeat;
       color: var(--text-main);
       font-family: "Source Serif 4", serif;
       -webkit-font-smoothing: antialiased;
