--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     href="https://fonts.googleapis.com/css2?family=Source+Serif+4:wght@300;400;500;600;700&display=swap"
     rel="stylesheet"
   />
+/* Featured Image Section */
+.featured-image {
+  width: 100%;
+  max-width: 1200px;
+  margin: 40px auto 0;
+}
 
+.featured-image img {
+  width: 100%;
+  height: auto;
+  display: block;
+  border-radius: 4px; /* opcional – fica elegante */
+}
   <style>
     :root {
       --bg-soft: #090b10;
@@ -225,7 +237,10 @@
       and <strong>analogue film practice</strong>, alongside documentation of projects
       developed with archives, festivals and cultural institutions.
     </p>
-  </section>
+  <section class="featured-image">
+  <img src="pag2.png" alt="Featured Image">
+</section>
+
 
 </body>
 </html>
