--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       margin: 0;
       padding: 0;
       min-height: 100vh;
-      background: url('Timeline2.gif') center/cover no-repeat fixed;
+      background: url('Timeline2.gif.gif') center/cover no-repeat fixed;
       font-family: "Source Serif 4", serif;
       color: var(--text-main);
       -webkit-font-smoothing: antialiased;
